# remix

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  env.yaml  prepare-chexpertplus.ipynb  pyproject.toml  requirements.txt  run-chexpertplus-gloria-frontal-findings-mlm.sh  run-chexpertplus-gloria-frontal-findings-no-mlm.sh  run-chexpertplus-gloria-frontal-impression-mlm.sh  run-chexpertplus-gloria-frontal-impression-no-mlm.sh  run-gloria.sh  run-mimic-biovil-frontal-findings-mlm.sh  run-mimic-biovil-frontal-findings-no-mlm.sh  run-mimic-biovil-frontal-impression-mlm.sh  run-mimic-biovil-frontal-impression-no-mlm.sh  run.py  run.sh  setup-experiments.ipynb  train.py
configs/: chexpertplus-frontal-gloria.yaml  chexpertplus-gloria-frontal-v3.yaml  chexpertplus-gloria-frontal.yaml  mimic-biovil-frontal-v3.yaml  mimic-biovil-frontal.yaml  mimic-frontal-biovil.yaml
data/: convirt_queries.csv
data_analysis/: 20250804_model_comparison.ipynb  20250904_new_model_comparison.ipynb  20251006_new_model_comparison_5x200.ipynb  20251013_make_chexpertplus_splits.ipynb
data_collection/: general_mimic_cosine_similarity.py  general_mimic_embedding_library.py
evaluation/: README.md  general_chexpertplus_accuracy.py  general_chexpertplus_cosine_similarity.py  general_chexpertplus_embedding_library.py  general_mimic_accuracy.py  general_mimic_accuracy_resampling.py  general_mimic_cosine_similarity.py  general_mimic_embedding_library.py  generate_evaluation_script.py  generate_mimic_frontal_exclusive_subset.py  himl_mimic_cosine_similarity.py  (+1 more)
models/: __init__.py  (+1 more)
(+123 files in other folders)
